動的コンポーネントの条件分岐の仕組みを改良

--- a/src/app/form/radio-button/radio-button.component.html
+++ b/src/app/form/radio-button/radio-button.component.html
@@ -1,4 +1,4 @@
-<label>{{ formItem.title }}</label
+<mat-label>{{ formItem.title }}</mat-label
 ><span *ngIf="formItem.required"> * </span>:
 <mat-radio-group [formControl]="selectedValue" [required]="formItem.required">
   <mat-radio-button
